--- a/css/styles-invoice.css
+++ b/css/styles-invoice.css
@@ -1,4 +1,4 @@
-/* styles-invoice.css */
+
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
@@ -16,7 +16,7 @@ header {
 .cart-summary {
     max-width: 1200px;
     margin: 1rem auto;
-    background-color: #fff;
+    background-color: #000000;
     padding: 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -43,7 +43,7 @@ header {
     padding: 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     float: left;
-    width: 48%; /* slightly less than half to accommodate any box-model calculations */
+    width: 48%; 
     box-sizing: border-box;
 }
 
@@ -89,7 +89,6 @@ button:hover {
     background-color: #2980b9;
 }
 
-/* Clearfix for floated elements */
 ::after {
     content: "";
     display: table;
